fix: sirens